<resources>
    <string name="app_name">RelayClient</string>
    <string name="bumm">BUMM</string>
    <string name="register">Register</string>
    <string name="relayki">RelayKi</string>
    <string name="relaybe">RelayBe</string>
    <string name="title_activity_login_to_controller">Bejelentkezés</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bejelentkez_s">Bejelentkezés</string>
    <string name="n_v">Név:</string>
    <string name="jelsz">Jelszó:</string>
    <string name="textview">TextView</string>
</resources>
