<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="petko.relayclient.ClientActivity">

    <Button
        android:id="@+id/relayBe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relaybe" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relayBe"
        android:text="@string/textview" />

    <Button
        android:id="@+id/realyKi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relayBe"
        android:layout_toEndOf="@+id/relayBe"
        android:layout_toRightOf="@+id/relayBe"
        android:text="@string/relayki" />

</RelativeLayout>
