<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="petko.relayclient.LoginToControllerActivity">

    <EditText
        android:id="@+id/NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PasswordText"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/PasswordText"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/NameText"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/bejelentkez_s" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/NameText"
        android:layout_alignBottom="@+id/NameText"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_toLeftOf="@+id/NameText"
        android:layout_toStartOf="@+id/NameText"
        android:text="@string/n_v"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/PasswordText"
        android:layout_alignBottom="@+id/PasswordText"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignRight="@+id/textView5"
        android:text="@string/jelsz"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</RelativeLayout>
